Update phone number in contact link

--- a/CEPTEKİUSTAM/public/index.html
+++ b/CEPTEKİUSTAM/public/index.html
@@ -338,7 +338,7 @@
                     <h3>Adres</h3>
                     <p>Gaziantep, Türkiye</p>
                 </div>
-                <a href="tel:05536918120" class="contact-card">
+                <a href="tel:0551 506 57 04" class="contact-card">
                     <div class="contact-icon">
                         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <path
